@@ -1,78 +1,84 @@
 <a name="top"></a>
 
-# Setting up Payola
+# Installation Guide
+
 ## System Requirements
 
 Payola requires a [Scala](http://www.scala-lang.org) environment, which is supported on virtually any platform capable of running Java code - both Unix and Windows-based systems are fully supported. The system should have at least 1GB of memory dedicated to Payola itself.
 
-Aside from the actual Payola server, you need to have a running [Squeryl-compatible](http://squeryl.org) relational database for storing user data, a [Virtuoso](http://virtuoso.openlinksw.com) server for storing personal RDF data and a SMTP server for the plugin approval process. The Virtuoso server needs to be running on the same server as Payola is, or at least share the file system - when uploading private data, a path to a temporary file is passed to Virtuoso. The SMTP and relational database, may be running on a different server (this is configurable in the `payola.conf` file as described later on).
+Aside from the actual Payola server, you need to have a running [Squeryl-compatible](http://squeryl.org) relational database for storing user data, a [Virtuoso](http://virtuoso.openlinksw.com) server for storing personal RDF data and an SMTP server for the plugin approval process. The Virtuoso server needs to be running on the same server as Payola is, or at least share the same file system - when uploading private data, a path to a temporary file is passed to Virtuoso. The SMTP server and the relational database may be running on a different server (this is configurable in the `payola.conf` file as described later on).
 
-To work with Payola, a web browser capable of displaying HTML5 web pages is required. Payola takes advantage of many HTML5 features - keep your web browser up-to-date all the time. Recommended are the *latest versions* of WebKit-based browsers (e.g. Chrome, Safari), Firefox, Opera, or IE. A 1440x900 or larger display is highly recommended.
+To work with Payola, a web browser capable of displaying HTML5 web pages is required. Payola takes an advantage of many HTML5 features - keep your web browser up-to-date all the time. Recommended are the *latest versions* of WebKit-based browsers (e.g. Chrome, Safari), Firefox, Opera, or IE. A 1440x900 or larger display is highly recommended.
 
-## Installation Guide
+## Installation
 
 First of all, clone the Payola git repository: `git://github.com/siroky/Payola.git` to a local folder.
 
-### <a name="configuration"></a>Configuration 
+<a name="configuration"></a>
+### Configuration 
 
 Payola comes pre-configured to work with default settings of a Virtuoso server and an H2 database installed on the same server as Payola is running (i.e. localhost). To change this configuration, edit `payola/web/shared/src/main/resources/payola.conf` - it’s a regular text file with various key-value options separated by an equal sign (`=`) on each line. Comment lines start with a hash symbol (`#`).
 
-> **Virtuoso Settings**
+#### Virtuoso Settings
 
-> *virtuoso.server* - address of the Virtuoso server
+`virtuoso.server` - address of the Virtuoso server
 
-> *virtuoso.endpoint.port* - port of the Virtuoso server's SPARQL endpoint
+`virtuoso.endpoint.port` - port of the Virtuoso server's SPARQL endpoint
 
-> *virtuoso.endpoint.ssl* - enter true if the connection to the Virtuoso SPARQL endpoint should use SSL
+`virtuoso.endpoint.ssl` - enter true if the connection to the Virtuoso SPARQL endpoint should use SSL
 
-> *virtuoso.sql.port* - port of the Virtuoso server's SQL database
+`virtuoso.sql.port` - port of the Virtuoso server's SQL database
 
-> *virtuoso.sql.user* - SQL database login name
+`virtuoso.sql.user` - SQL database login name
 
-> *virtuoso.sql.password* - SQL database login password
+`virtuoso.sql.password` - SQL database login password
 
-> **Relational Database Settings**
+#### Relational Database Settings
 
-> *database.location* - JDBC URL of the database
+`database.location` - JDBC URL of the database
 
-> *database.user* - database login name
+`database.user` - database login name
 
-> *database.password* - database login password
+`database.password` - database login password
 
-> **User**
+#### User
 
-> *admin.email* - Email of the admin user. A user with this email address also gets created when the initializer project is run.
+`admin.email` - Email of the admin user. A user with this email address also gets created when the initializer project is run. When a user uploads a plugin an email is sent to this address for the admin to approve the plugin, as well.
 
-> **Web**
+#### Web
 
-> *web.url* - URL of the website, by default `http://localhost:9000`. The URL must start with `http://` or `https://` and mustn't end with a trailing `/`.
+`web.url` - URL of the website, by default `http://localhost:9000`. The URL must start with `http://` or `https://` and mustn't end with a trailing `/`.
 
-> *web.mail.noreply* - Email that will be used as a no-reply email of the web application.
+`web.mail.noreply` - Email that will be used as a no-reply email address of the web application.
 
-> **Email**
+#### Email
 
-> *mail.smtp.server* - Mail server.
+`mail.smtp.server` - Mail server.
 
-> *mail.smtp.port* - Mail server port.
+`mail.smtp.port` - Mail server port.
 
-> *mail.smtp.user* - Username.
+`mail.smtp.user` - Username.
 
-> *mail.smtp.password* - Password.
+`mail.smtp.password` - Password.
 
-> **Libraries**
+#### Libraries
 
-> *lib.directory* - storage for 3rd-party libraries
+`lib.directory` - storage for 3rd-party libraries
 
-> **Plugins Directory**
+#### Plugins Directory
 
-> *plugin.directory* - where to store plugins uploaded by users
-
-**Payola will not start Virtuoso or H2 on its own. You need to configure it and run by yourself.**
+`plugin.directory` - where to store plugins uploaded by users
 
 <a name="compiling"></a>
 ### Compiling and Running Payola
 
-As the cloned repository contains just source code, it is necessary to compile Payola in order to run it. Open a command line (console, terminal) and make `payola` subdirectory the current working directory (e.g. by `cd payola`). Launch SBT (using the `sbt` command or the `sbt.bat` on Windows) and enter the following commands:
+> **Payola will not start Virtuoso or H2 on its own. You need to configure them and run them by yourself.**
+
+As the cloned repository contains just source code, it is necessary to compile Payola in order to run it. Open a command line (console, terminal) and make `payola` subdirectory the current working directory (e.g. by `cd payola`). Launch SBT (using the `sbt.sh` command or the `sbt.bat` on Windows) ...
+
+>You can edit these commands in a text editor to change the amount of memory given to Payola. By default, Payola uses 1GB of memory (the `-Xmx` argument), 512MB of memory for the [permgen](http://en.wikipedia.org/wiki/Java_virtual_machine#Heap) (the `-XX:MaxPermSize` argument) and 2MB stack size (the `-Xss` argument).
+
+... and enter the following commands:
 
 <a name="run-initializer"></a>
 ```
@@ -89,16 +95,13 @@ Voilà! Your Payola server is running. The `initializer` project sets up your da
 
 ![Installing and running Payola](https://raw.github.com/siroky/Payola/develop/docs/img/installscreen.png)
 
-> <a name="drop-create-warning"></a> **WARNING:** The `initializer` project drop-creates all required tables - hence all previous data will be lost. Run this project only when installing Payola or if you want to reset Payola to factory settings.
+> <a name="drop-create-warning"></a> **Warning:** The `initializer` project drops and recreates all tables in the database - hence all previous data will be lost. Run this project only when installing Payola for the first time or if you want to reset Payola to factory settings.
 
-### Security
+## Security
 
 Payola allows users to store their own private RDF data using Virtuoso graph groups that are identified by a generated 128-bit UUID (and the H2 database is secured by a username-password combination). Both the Virtuoso server and H2 database allow incoming connections from outside of your network, or localhost, by default.
 
 While a simple guess of another user's group identifier is unlikely (and a brute-force attack on the username-password combination for the relational database is highly noticeable), it is advisable to secure your local Virtuoso storage and your relational database by denying all incoming and outgoing connections outside of localhost, or if on a secure company network, outside of that particular network. This is up to each administrator to correctly set up the server's firewall.
-
----
-# Using Payola
 
 ## Launching
 
@@ -112,10 +115,10 @@ To launch Payola, open SBT just like when you were [compiling](#compiling) it an
 > run
 ```
 
-> *Warning:* Do **not** run the `initializer` project. All users, analyses, data sources, etc. would be lost. (See [this note](#drop-create-warning) for details.)
+> **Warning:** Do **not** run the `initializer` project. All users, analyses, data sources, etc. would be lost. (See [this note](#drop-create-warning) for details.)
 
 Once the server is running, enter the following address in your web browser:
 
 ><http://localhost:9000/>
 
-Of course, the port may be different depending on your configuration file (see section [Configuration](#configuration) for details).
+Of course, the port may vary depending on your configuration file (see section [Configuration](#configuration) for details).
